# QLearning_Labirint

./: CMakeLists.txt  QLearning.vcxproj  README.md  Source.cpp  main.cpp
Debug/: QLearning.exe.recipe  QLearning.ilk  vc142.idb
Debug/QLearning.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QLearning.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
